Fix the Dockerfile error